# WindowsScreenSpliter

./: README.md  license  main.py  pyproject.toml
src/: app_loader.py  config.ini  config_loader.py  main.py  virtual_desk_manager.py  window_status.py
